objects/RateConversionHistory__c/RateConversionHistory__c.object-meta.xml
<CustomObject>
    <label>RateConversionHistory</label>
    <nameField>
        <displayFormat>HIST-{0000}</displayFormat>
        <label>RateConversionHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RateConversionHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>