objects/RateConversionHistory__c/fields/Amount_to_convert__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_convert__c</fullName>
    <label>Amount to convert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>