objects/RateConversionHistory__c/fields/Converted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Amount__c</fullName>
    <label>Converted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>