objects/RateConversionHistory__c/fields/Converted_Currency__c.field-meta.xml
<CustomField>
    <fullName>Converted_Currency__c</fullName>
    <label>Converted Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>