objects/RateConversionHistory__c/fields/Currency_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Currency_to_Convert__c</fullName>
    <label>Currency to Convert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>